structure mobile header-component

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,12 +2,6 @@
 
   <section class="headerContent">
 
-    <!-- <button class="toggle_btn" (click)="toggleDropDownMenu()">
-      <div [class.active]="showDropDownMenu"></div>
-      <div [class.active]="showDropDownMenu"></div>
-      <div [class.active]="showDropDownMenu"></div>
-    </button> -->
-
     <div class="containerLogo">
       <a href="#">
         <img src="assets/img/logo/Logo.png" alt="">
@@ -34,23 +28,13 @@
       </div>
 
     </div>
+
+    <button class="toggle_btn" (click)="toggleDropDownMenu()">
+      <div [class.active]="showDropDownMenu"></div>
+      <div [class.active]="showDropDownMenu"></div>
+      <div [class.active]="showDropDownMenu"></div>
+    </button>
+
   </section>
-
-  <!-- *****  -->
-<!-- <h1 class="title">Drink of the moment</h1>
-
-<p class="text">
-  Gin, also known as gin, is one of the most
-  popular and appreciated alcoholic beverages
-  worldwide, especially for its versatility in
-  cocktails. Originally from Europe, this spirit has
-  evolved over the centuries and comes in a wide
-  range of styles and flavors.
-</p>
-
-<button class="primary-botton">
-  Try now
-  <i class="pi pi-chevron-right"></i>
-</button> -->
 
 </header>
