--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -27,6 +27,10 @@
         <input type="text" class="search-text" placeholder="Search">
       </div>
 
+      <div class="bxBookmark">
+        <img src="../../../assets/img/ilustraciones/bookmarks.png" alt="">
+      </div>
+
     </div>
 
     <button class="toggle_btn" (click)="toggleDropDownMenu()">
