--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -8,6 +8,7 @@ header{
   transition: all 300ms ease-in;
   //background: orange;
   padding: 10px 0px;
+  //border-bottom: solid 0.5px #574747;
   section.headerContent{
     display: flex;
     width: 100%;
@@ -119,7 +120,7 @@ header{
       height: 50px;
       border: none;
       padding: 10px;
-      //background: transparent;
+      background: transparent;
       position: absolute;
       //background: yellowgreen;
       gap: .65rem;
@@ -157,6 +158,98 @@ header{
           background: var(--primary-color);
           transform-origin: left;
         }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 900px){
+  header{
+    section.headerContent{
+      background: orange;
+      flex-direction: row;
+      max-width: 1300px;
+      .containerLogo{
+        width: 20%;
+        background: yellowgreen;
+        a{
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+          img{
+            width: 85%;
+          }
+        }
+      }
+
+      .containerMenu{
+        display: flex;
+        background: red;
+        position: relative;
+        width: 60%;
+        justify-content: flex-start;
+        translate: (0px 0px);
+        transition: all 300ms ease-in-out;
+        nav{
+          display: flex;
+          width: 100%;
+          //height: 0px;
+          justify-content: flex-start;
+          padding: 5px;
+          align-items: center;
+          transition: all 0.4s cubic-bezier(0.82, 0.02, 0.13, 1.26);
+          ul.nav{
+            position: relative;
+            display: flex;
+            flex-direction: row;
+            li{
+              list-style: none;
+              a{
+                display: inline-block;
+                color: var(--font-color);
+                font-family: var(--font-family);
+                text-decoration: none;
+                padding: 15px 30px;
+                font-size: 18px;
+                font-weight: 100;
+                &::before{
+                  position: absolute;
+                  content: '';
+                  width: 0px;
+                  height: 3px;
+                  background: var(--alternative-color);
+                  bottom: 0;
+                  border-radius: 4px;
+                  transition: all 0.4s cubic-bezier(0.82, 0.02, 0.13, 1.26);
+
+                }
+                &:hover::before{
+                  width: 40px;
+                }
+                &:hover{
+                  font-weight: 800;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      .search-box{
+        width: 20%;
+        padding: 0px;
+        background: pink;
+
+        .bxBookmark{
+          img{
+            width: 50%;
+
+          }
+        }
+      }
+
+      button.toggle_btn{
+        display: none;
       }
     }
   }
