--- a/src/app/pages/cocktail-landing/components/banner-landing/banner-landing.component.scss
+++ b/src/app/pages/cocktail-landing/components/banner-landing/banner-landing.component.scss
@@ -251,7 +251,8 @@
       justify-content: space-between;
       max-width: 1300px;
       //flex-wrap: wrap;
-      //background: orange;
+      padding: 30px 0px 0px 0px;
+      //background: green;
       .infoContet{
         height: 100%;
         /* alineacion horizontal */
