structure drinks components

--- a/src/app/pages/cocktail-landing/cocktail-landing.component.html
+++ b/src/app/pages/cocktail-landing/cocktail-landing.component.html
@@ -2,6 +2,10 @@
   <app-banner-landing></app-banner-landing>
 </div>
 
+<div class="containerComponent2">
+  <app-popular-drinks></app-popular-drinks>
+</div>
+
 <!-- <div class="popularDrinksContainer">
   <app-popular-drinks></app-popular-drinks>
 </div> -->
