--- a/src/app/pages/cocktail-landing/cocktail-landing.component.scss
+++ b/src/app/pages/cocktail-landing/cocktail-landing.component.scss
@@ -13,6 +13,16 @@
   margin: 10px 0px;
   transition: all 300ms ease;
 }
+
+.containerComponent2{
+  //display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  //padding: 5px;
+  transition: all 300ms ease;
+  //background: red;
+}
 /* .containerBanner{
   display: flex;
   width: 100%;
@@ -45,7 +55,7 @@
 
  @media screen and (min-width: 900px){
   .containerComponent{
-    background-size: 50%;
+    background-size: 5<0%;
     background-repeat: no-repeat;
   }
 }
