--- a/src/app/pages/cocktail-landing/components/popular-drinks/popular-drinks.component.html
+++ b/src/app/pages/cocktail-landing/components/popular-drinks/popular-drinks.component.html
@@ -1,217 +1,224 @@
-<div class="contentDrinks">
-  <div class="bg1Drinks">
-    <div class="titleDrinks">
-      <h1>Popular Drinks</h1>
-    </div>
-    <div class="bg2Drinks">
-      <section class="drinks">
+<div class="ContainerDrinks">
 
-        <div class="containerDrinks">
+  <div class="drinks">
 
-          <div class="popularDrinks1">
+    <div class="bg1Drinks">
 
-            <!-- ngFor -->
-            <div class="cardDrink">
-              <div class="containerCardImg">
-                <div class="bxImg">
-                  <img src="assets/img/ilustraciones/mojito.png" alt="">
+      <div class="bg2Drinks">
+
+        <div class="titleDrinks">
+          <h1>Popular Drinks</h1>
+        </div>
+        <section class="cocktails">
+
+          <div class="containerCocktails">
+
+            <div class="popularCocktails">
+
+              <!-- ngFor -->
+              <div class="cardDrink">
+                <div class="containerCardImg">
+                  <div class="bxImg">
+                    <img src="assets/img/ilustraciones/mojito.png" alt="">
+                  </div>
+                </div>
+                <div class="contenText">
+                  <h3>Mojito</h3>
+                  <button class="buttonCard">
+                    add to my list
+                    <i class="pi pi-plus"></i>
+                  </button>
                 </div>
               </div>
-              <div class="contenText">
-                <h3>Mojito</h3>
-                <button class="buttonCard">
-                  add to my list
-                  <i class="pi pi-plus"></i>
-                </button>
-              </div>
-            </div>
 
-            <div class="cardDrink">
-              <div class="containerCardImg">
-                <div class="bxImg">
-                  <img src="assets/img/ilustraciones/Old Fashioned.png" alt="">
+              <div class="cardDrink">
+                <div class="containerCardImg">
+                  <div class="bxImg">
+                    <img src="assets/img/ilustraciones/Old Fashioned.png" alt="">
+                  </div>
+                </div>
+                <div class="contenText">
+                  <h3>Old Fashioned</h3>
+                  <button class="buttonCard">
+                    add to my list
+                    <i class="pi pi-plus"></i>
+                  </button>
                 </div>
               </div>
-              <div class="contenText">
-                <h3>Old Fashioned</h3>
-                <button class="buttonCard">
-                  add to my list
-                  <i class="pi pi-plus"></i>
-                </button>
-              </div>
-            </div>
 
-            <div class="cardDrink">
-              <div class="containerCardImg">
-                <div class="bxImg">
-                  <img src="assets/img/ilustraciones/Long Island Tea.png" alt="">
+              <div class="cardDrink">
+                <div class="containerCardImg">
+                  <div class="bxImg">
+                    <img src="assets/img/ilustraciones/Long Island Tea.png" alt="">
+                  </div>
+                </div>
+                <div class="contenText">
+                  <h3>Long Island Tea</h3>
+                  <button class="buttonCard">
+                    add to my list
+                    <i class="pi pi-plus"></i>
+                  </button>
                 </div>
               </div>
-              <div class="contenText">
-                <h3>Long Island Tea</h3>
-                <button class="buttonCard">
-                  add to my list
-                  <i class="pi pi-plus"></i>
-                </button>
-              </div>
-            </div>
 
-            <div class="cardDrink">
-              <div class="containerCardImg">
-                <div class="bxImg">
-                  <img src="assets/img/ilustraciones/Negroni.png" alt="">
+              <div class="cardDrink">
+                <div class="containerCardImg">
+                  <div class="bxImg">
+                    <img src="assets/img/ilustraciones/Negroni.png" alt="">
+                  </div>
+                </div>
+                <div class="contenText">
+                  <h3>Negroni</h3>
+                  <button class="buttonCard">
+                    add to my list
+                    <i class="pi pi-plus"></i>
+                  </button>
                 </div>
               </div>
-              <div class="contenText">
-                <h3>Negroni</h3>
-                <button class="buttonCard">
-                  add to my list
-                  <i class="pi pi-plus"></i>
-                </button>
-              </div>
-            </div>
 
-            <div class="cardDrink">
-              <div class="containerCardImg">
-                <div class="bxImg">
-                  <img src="assets/img/ilustraciones/Whiskey Sour.png" alt="">
+              <div class="cardDrink">
+                <div class="containerCardImg">
+                  <div class="bxImg">
+                    <img src="assets/img/ilustraciones/Whiskey Sour.png" alt="">
+                  </div>
+                </div>
+                <div class="contenText">
+                  <h3>Whiskey Sour</h3>
+                  <button class="buttonCard">
+                    add to my list
+                    <i class="pi pi-plus"></i>
+                  </button>
                 </div>
               </div>
-              <div class="contenText">
-                <h3>Whiskey Sour</h3>
-                <button class="buttonCard">
-                  add to my list
-                  <i class="pi pi-plus"></i>
-                </button>
-              </div>
-            </div>
 
-            <div class="cardDrink">
-              <div class="containerCardImg">
-                <div class="bxImg">
-                  <img src="assets/img/ilustraciones/Dry Martini.png" alt="">
+              <div class="cardDrink">
+                <div class="containerCardImg">
+                  <div class="bxImg">
+                    <img src="assets/img/ilustraciones/Dry Martini.png" alt="">
+                  </div>
+                </div>
+                <div class="contenText">
+                  <h3>Dry Martíni</h3>
+                  <button class="buttonCard">
+                    add to my list
+                    <i class="pi pi-plus"></i>
+                  </button>
                 </div>
               </div>
-              <div class="contenText">
-                <h3>Dry Martíni</h3>
-                <button class="buttonCard">
-                  add to my list
-                  <i class="pi pi-plus"></i>
-                </button>
-              </div>
-            </div>
 
-            <div class="cardDrink">
-              <div class="containerCardImg">
-                <div class="bxImg">
-                  <img src="assets/img/ilustraciones/Daiquiri.png" alt="">
+              <div class="cardDrink">
+                <div class="containerCardImg">
+                  <div class="bxImg">
+                    <img src="assets/img/ilustraciones/Daiquiri.png" alt="">
+                  </div>
+                </div>
+                <div class="contenText">
+                  <h3>Daiquiri</h3>
+                  <button class="buttonCard">
+                    add to my list
+                    <i class="pi pi-plus"></i>
+                  </button>
                 </div>
               </div>
-              <div class="contenText">
-                <h3>Daiquiri</h3>
-                <button class="buttonCard">
-                  add to my list
-                  <i class="pi pi-plus"></i>
-                </button>
-              </div>
-            </div>
 
-            <div class="cardDrink">
-              <div class="containerCardImg">
-                <div class="bxImg">
-                  <img src="assets/img/ilustraciones/Margarita.png" alt="">
+              <div class="cardDrink">
+                <div class="containerCardImg">
+                  <div class="bxImg">
+                    <img src="assets/img/ilustraciones/Margarita.png" alt="">
+                  </div>
+                </div>
+                <div class="contenText">
+                  <h3>Margarita</h3>
+                  <button class="buttonCard">
+                    add to my list
+                    <i class="pi pi-plus"></i>
+                  </button>
                 </div>
               </div>
-              <div class="contenText">
-                <h3>Margarita</h3>
-                <button class="buttonCard">
-                  add to my list
-                  <i class="pi pi-plus"></i>
-                </button>
-              </div>
+
             </div>
 
           </div>
-
-        </div>
-      </section>
+        </section>
+      </div>
     </div>
-  </div>
 
-  <div class="bgIngredients">
-    <div class="titleIngredients">
-      <h1>Popular Ingredients</h1>
-    </div>
-    <div class="bg2Ingredients">
-      <section class="ingredients">
-        <div class="containerIngredients">
-          <div class="popularIngredients">
+    <div class="bgIngredients">
+      <div class="titleIngredients">
+        <h1>Popular Ingredients</h1>
+      </div>
+      <div class="bg2Ingredients">
+        <section class="ingredients">
+          <div class="containerIngredients">
+            <div class="popularIngredients">
 
-            <!-- ngFor -->
-            <div class="cardDrink">
-              <div class="containerCardImg">
-                <div class="bxImg">
-                  <img src="assets/img/ilustraciones/Vodka.png" alt="">
+              <!-- ngFor -->
+              <div class="cardDrink">
+                <div class="containerCardImg">
+                  <div class="bxImg">
+                    <img src="assets/img/ilustraciones/Vodka.png" alt="">
+                  </div>
+                </div>
+                <div class="contenText">
+                  <h3>Vodka</h3>
+                  <button class="buttonCard">
+                    Recipes with vodka
+                    <i class="pi pi-chevron-right"></i>
+                  </button>
                 </div>
               </div>
-              <div class="contenText">
-                <h3>Vodka</h3>
-                <button class="buttonCard">
-                  Recipes with vodka
-                  <i class="pi pi-chevron-right"></i>
-                </button>
-              </div>
-            </div>
 
-            <div class="cardDrink">
-              <div class="containerCardImg">
-                <div class="bxImg">
-                  <img src="assets/img/ilustraciones/Gin.png" alt="">
+              <div class="cardDrink">
+                <div class="containerCardImg">
+                  <div class="bxImg">
+                    <img src="assets/img/ilustraciones/Gin.png" alt="">
+                  </div>
+                </div>
+                <div class="contenText">
+                  <h3>Gin</h3>
+                  <button class="buttonCard">
+                    Recipes with Gin
+                    <i class="pi pi-chevron-right"></i>
+                  </button>
                 </div>
               </div>
-              <div class="contenText">
-                <h3>Gin</h3>
-                <button class="buttonCard">
-                  Recipes with Gin
-                  <i class="pi pi-chevron-right"></i>
-                </button>
-              </div>
-            </div>
 
-            <div class="cardDrink">
-              <div class="containerCardImg">
-                <div class="bxImg">
-                  <img src="assets/img/ilustraciones/Rum.png" alt="">
+              <div class="cardDrink">
+                <div class="containerCardImg">
+                  <div class="bxImg">
+                    <img src="assets/img/ilustraciones/Rum.png" alt="">
+                  </div>
+                </div>
+                <div class="contenText">
+                  <h3>Rum</h3>
+                  <button class="buttonCard">
+                    Recipes with Rum
+                    <i class="pi pi-chevron-right"></i>
+                  </button>
                 </div>
               </div>
-              <div class="contenText">
-                <h3>Rum</h3>
-                <button class="buttonCard">
-                  Recipes with Rum
-                  <i class="pi pi-chevron-right"></i>
-                </button>
-              </div>
-            </div>
 
-            <div class="cardDrink">
-              <div class="containerCardImg">
-                <div class="bxImg">
-                  <img src="assets/img/ilustraciones/Tequila.png" alt="">
+              <div class="cardDrink">
+                <div class="containerCardImg">
+                  <div class="bxImg">
+                    <img src="assets/img/ilustraciones/Tequila.png" alt="">
+                  </div>
+                </div>
+                <div class="contenText">
+                  <h3>Tequila</h3>
+                  <button class="buttonCard">
+                    Recipes with Tequila
+                    <i class="pi pi-chevron-right"></i>
+                  </button>
                 </div>
               </div>
-              <div class="contenText">
-                <h3>Tequila</h3>
-                <button class="buttonCard">
-                  Recipes with Tequila
-                  <i class="pi pi-chevron-right"></i>
-                </button>
-              </div>
-            </div>
 
+            </div>
           </div>
-        </div>
-      </section>
+        </section>
+      </div>
     </div>
+
   </div>
 
 
