--- a/src/app/pages/cocktail-landing/cocktail-landing.component.scss
+++ b/src/app/pages/cocktail-landing/cocktail-landing.component.scss
@@ -53,9 +53,9 @@
 }
  */
 
- @media screen and (min-width: 900px){
+ @media screen and (min-width: 800px){
   .containerComponent{
-    background-size: 5<0%;
+    background-size: 50%;
     background-repeat: no-repeat;
   }
 }
