animations and adjustment images

--- a/src/app/pages/cocktail-landing/components/banner-landing/banner-landing.component.html
+++ b/src/app/pages/cocktail-landing/components/banner-landing/banner-landing.component.html
@@ -3,10 +3,12 @@
   <div class="banner">
 
     <div class="infoContet">
-      <h1 class="title titleDesktop">
+      <h1 data-aos="fade-right" data-aos-duration="1000" class="title titleDesktop">
         Drink of the moment
       </h1>
-      <div class="textContent">
+      <div data-aos="fade-up"
+        data-aos-anchor-placement="top-bottom"
+        data-aos-duration="1000" class="textContent">
         <p class="text">
           Gin, also known as gin, is one of the most
           popular and appreciated alcoholic beverages
@@ -16,11 +18,16 @@
           range of styles and flavors.
         </p>
       </div>
-      <h1 class="title">
+      <h1 data-aos="fade-up"
+          data-aos-anchor-placement="top-bottom"
+          data-aos-duration="1000" class="title">
         4.9
       </h1>
       <div class="containerbutton">
-        <button class="primary-botton">
+        <button data-aos="fade-zoom-in"
+            data-aos-easing="ease-in-back"
+            data-aos-delay="1000"
+            data-aos-offset="0" class="primary-botton">
           Try now
           <i class="pi pi-chevron-right"></i>
         </button>
@@ -28,7 +35,8 @@
     </div>
 
     <div class="imgBoxInfo">
-      <div class="imgBx">
+      <!-- Animacion -->
+      <div data-aos="zoom-in-up" data-aos-duration="1000" class="imgBx">
         <div class="bg1">
           <div class="bg2">
             <div class="ginContet">
@@ -46,10 +54,16 @@
     </div>
 
     <div class="infoList">
-      <div class="infoCocktail">
+      <div data-aos="fade-left"
+            data-aos-anchor="#example-anchor"
+            data-aos-offset="500"
+            data-aos-duration="1500" class="infoCocktail">
         <div class="imgbxContainer">
-          <div class="bxImg">
-            <img src="../../../../../assets/img/ilustraciones/water-solid 1.png" alt="">
+          <div data-aos="fade-zoom-in"
+              data-aos-easing="ease-in-back"
+              data-aos-delay="300"
+              data-aos-offset="0" class="bxImg">
+            <img src="assets/img/ilustraciones/water-solid 1.png" alt="">
           </div>
         </div>
         <div class="text">
@@ -63,10 +77,16 @@
         </div>
       </div>
 
-      <div class="infoCocktail">
+      <div data-aos="fade-left"
+          data-aos-anchor="#example-anchor"
+          data-aos-offset="500"
+          data-aos-duration="1500" class="infoCocktail">
         <div class="imgbxContainer">
-          <div class="bxImg">
-            <img src="../../../../../assets/img/ilustraciones/cocktail-solid 1.png" alt="">
+          <div data-aos="fade-zoom-in"
+              data-aos-easing="ease-in-back"
+              data-aos-delay="300"
+              data-aos-offset="0" class="bxImg">
+            <img src="assets/img/ilustraciones/cocktail-solid 1.png" alt="">
           </div>
         </div>
         <div class="text">
@@ -79,10 +99,16 @@
         </div>
       </div>
 
-      <div class="infoCocktail">
+      <div data-aos="fade-left"
+          data-aos-anchor="#example-anchor"
+          data-aos-offset="500"
+          data-aos-duration="1500" class="infoCocktail">
         <div class="imgbxContainer">
-          <div class="bxImg">
-            <img src="../../../../../assets/img/ilustraciones/Vector.png" alt="">
+          <div data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-delay="300"
+                data-aos-offset="0" class="bxImg">
+            <img src="assets/img/ilustraciones/Vector.png" alt="">
           </div>
         </div>
         <div class="text">
