--- a/src/app/pages/cocktail-landing/components/banner-landing/banner-landing.component.scss
+++ b/src/app/pages/cocktail-landing/components/banner-landing/banner-landing.component.scss
@@ -83,7 +83,7 @@
           height: 350px;
           justify-content: center;
           align-items: center;
-          background: url(/assets/img/ilustraciones/Fruta-roja-centro.png);
+          background: url(../../../../../assets/img/ilustraciones/Fruta-roja-centro.png);
           background-repeat: no-repeat;
           background-position: -5% 75%;
           padding: 0;
@@ -93,7 +93,7 @@
             height: 350px;
             justify-content: center;
             align-items: center;
-            background: url(/assets/img/ilustraciones/Palitos-cafe-centro.png);
+            background: url(../../../../../assets/img/ilustraciones/Palitos-cafe-centro.png);
             background-repeat: no-repeat;
             background-position: right 0% bottom 45%;
             padding: 0;
