--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -28,7 +28,7 @@
       </div>
 
       <div class="bxBookmark">
-        <img src="../../../assets/img/ilustraciones/bookmarks.png" alt="">
+        <img src="assets/img/ilustraciones/bookmarks.png" alt="">
       </div>
 
     </div>
