--- a/src/app/pages/cocktail-landing/components/popular-drinks/popular-drinks.component.html
+++ b/src/app/pages/cocktail-landing/components/popular-drinks/popular-drinks.component.html
@@ -6,8 +6,13 @@
 
       <div class="bg2Drinks">
 
-        <div class="titleDrinks">
-          <h1>Popular Drinks</h1>
+        <div
+          data-aos="fade-down-right"
+          data-aos-offset="300"
+          data-aos-easing="ease-in-sine" class="titleDrinks">
+          <h1>
+            Popular Drinks
+          </h1>
         </div>
         <section class="cocktails">
 
@@ -18,7 +23,8 @@
           <div class="popularCocktails">
 
             <!-- ngFor -->
-            <div class="cardDrink">
+            <div data-aos="fade-up"
+              data-aos-duration="3000" class="cardDrink">
               <div class="containerCardImg">
                 <div class="bxImg">
                   <img src="assets/img/ilustraciones/mojito.png" alt="">
@@ -33,7 +39,8 @@
               </div>
             </div>
 
-            <div class="cardDrink">
+            <div data-aos="fade-up"
+              data-aos-duration="3000" class="cardDrink">
               <div class="containerCardImg">
                 <div class="bxImg">
                   <img src="assets/img/ilustraciones/Old Fashioned.png" alt="">
@@ -48,7 +55,8 @@
               </div>
             </div>
 
-            <div class="cardDrink">
+            <div data-aos="fade-up"
+              data-aos-duration="3000" class="cardDrink">
               <div class="containerCardImg">
                 <div class="bxImg">
                   <img src="assets/img/ilustraciones/Long Island Tea.png" alt="">
@@ -63,7 +71,8 @@
               </div>
             </div>
 
-            <div class="cardDrink">
+            <div data-aos="fade-up"
+              data-aos-duration="3000" class="cardDrink">
               <div class="containerCardImg">
                 <div class="bxImg">
                   <img src="assets/img/ilustraciones/Negroni.png" alt="">
@@ -78,7 +87,8 @@
               </div>
             </div>
 
-            <div class="cardDrink">
+            <div data-aos="fade-up"
+              data-aos-duration="3000" class="cardDrink">
               <div class="containerCardImg">
                 <div class="bxImg">
                   <img src="assets/img/ilustraciones/Whiskey Sour.png" alt="">
@@ -93,7 +103,8 @@
               </div>
             </div>
 
-            <div class="cardDrink">
+            <div data-aos="fade-up"
+              data-aos-duration="3000" class="cardDrink">
               <div class="containerCardImg">
                 <div class="bxImg">
                   <img src="assets/img/ilustraciones/Dry Martini.png" alt="">
@@ -108,7 +119,8 @@
               </div>
             </div>
 
-            <div class="cardDrink">
+            <div data-aos="fade-up"
+              data-aos-duration="3000" class="cardDrink">
               <div class="containerCardImg">
                 <div class="bxImg">
                   <img src="assets/img/ilustraciones/Daiquiri.png" alt="">
@@ -123,7 +135,8 @@
               </div>
             </div>
 
-            <div class="cardDrink">
+            <div data-aos="fade-up"
+              data-aos-duration="3000" class="cardDrink">
               <div class="containerCardImg">
                 <div class="bxImg">
                   <img src="assets/img/ilustraciones/Margarita.png" alt="">
@@ -149,7 +162,11 @@
       <div class="bg2Ingredients">
 
         <div class="titleDrinks">
-          <h1>Popular Ingredients</h1>
+          <h1 data-aos="fade-left"
+            data-aos-offset="300"
+            data-aos-easing="ease-in-sine">
+            Popular Ingredients
+          </h1>
         </div>
         <section class="cocktails">
 
@@ -160,7 +177,10 @@
           <div class="popularCocktails">
 
             <!-- ngFor -->
-            <div class="cardDrink">
+            <div data-aos="zoom-out-down"
+              data-aos-duration="1900"
+              data-aos-offset="300"
+              data-aos-easing="ease-in-sine" class="cardDrink">
               <div class="containerCardImg">
                 <div class="bxImg">
                   <img src="assets/img/ilustraciones/Vodka.png" alt="">
@@ -175,7 +195,10 @@
               </div>
             </div>
 
-            <div class="cardDrink">
+            <div data-aos="zoom-out-down"
+              data-aos-duration="1900"
+              data-aos-offset="300"
+              data-aos-easing="ease-in-sine" class="cardDrink">
               <div class="containerCardImg">
                 <div class="bxImg">
                   <img src="assets/img/ilustraciones/Gin.png" alt="">
@@ -190,7 +213,10 @@
               </div>
             </div>
 
-            <div class="cardDrink">
+            <div data-aos="zoom-out-down"
+              data-aos-duration="1900"
+              data-aos-offset="300"
+              data-aos-easing="ease-in-sine" class="cardDrink">
               <div class="containerCardImg">
                 <div class="bxImg">
                   <img src="assets/img/ilustraciones/Rum.png" alt="">
@@ -205,7 +231,10 @@
               </div>
             </div>
 
-            <div class="cardDrink">
+            <div data-aos="zoom-out-down"
+              data-aos-duration="1900"
+              data-aos-offset="300"
+              data-aos-easing="ease-in-sine" class="cardDrink">
               <div class="containerCardImg">
                 <div class="bxImg">
                   <img src="assets/img/ilustraciones/Tequila.png" alt="">
