--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,10 @@
 
   <section class="headerContent">
 
-    <div class="containerLogo">
+    <div data-aos="zoom-in-up"
+        data-aos-duration="1900"
+        data-aos-offset="300"
+        data-aos-easing="ease-in-sine" class="containerLogo">
       <a href="#">
         <img src="assets/img/logo/Logo.png" alt="">
       </a>
